--- a/src/styles/read.module.less
+++ b/src/styles/read.module.less
@@ -1,10 +1,11 @@
 :local {
   .header{
     background: rgb(25,25,25) !important;
-    padding:0px 10px !important;
+    padding:0px 0px !important;
     position: fixed !important;
     width: 100vw !important;
     top: 0px !important;
+    // display: flex;
   }
   
   .head-font-base{
@@ -79,29 +80,31 @@
 
   .pre{
     .icon-base;
+    padding-bottom: 50px !important;
     padding-right: 10px !important;
     float: left !important;
     white-space: pre-wrap!important;
     word-wrap: break-word!important;
   }
+  
 
   .box{
     padding: 0px 20px !important;
-    padding-bottom: 100px !important;
-    font-size: 1.2rem !important;
+    
     min-height: 100vh !important;
     height: 100vh !important;
     overflow-y: scroll !important;
   }
   .control{
-    font-size: 1.0rem;
-    padding: 0px 50px;
-    cursor: pointer;
+    padding-bottom: 50px !important;
+    margin-bottom: 50px;
+    padding: 0px 50px!important;
+    cursor: pointer!important;
     span:first-child{
-      float: left;
+      float: left!important;
     }
     span:last-child{
-      float: right;
+      float: right!important;
     }
   }
 }
