--- a/src/styles/main.module.less
+++ b/src/styles/main.module.less
@@ -5,6 +5,30 @@
     height: 100px;
   }
 
+  .rowNavel{
+    border-bottom: 1px solid rgb(225, 225, 226);
+    background:#fff0e8;
+    height: 50px;
+    font-size:20px;
+    font-weight:bold;
+  }
+
+  .rowComic{
+    border-bottom: 1px solid rgb(225, 225, 226);
+    background:#faedf5;
+    height: 50px;
+    font-size:20px;
+    font-weight:bold;
+  }
+
+  .rowVideo{
+    border-bottom: 1px solid rgb(225, 225, 226);
+    background:#f1f0fb;
+    height: 50px;
+    font-size:20px;
+    font-weight:bold;
+  }
+
   .header{
     background: rgb(198,47,47) !important;
     padding:0px 15px !important;
@@ -58,7 +82,7 @@
   }
 
   .null{
-    line-height: calc(~'100vh - 64px');
+    line-height: calc(~'10vh');
     font-size: 1.2rem;
     font-weight: bold;
   }
@@ -136,3 +160,10 @@
 
 }
 
+
+
+:global {
+  .ant-input-affix-wrapper .anticon-close-circle{
+    color: black !important;
+  }
+}
