--- a/src/styles/main.module.less
+++ b/src/styles/main.module.less
@@ -158,6 +158,50 @@
     top:80%;
   }
 
+  .box{
+    padding: 10px 20px;
+
+
+    img{
+      height: 60px;
+      width: 45px;
+    }
+    div {
+      height: 60px;
+    }
+    p{
+      float: right;
+      text-align: left;
+      width: calc(~'100% - 60px');
+      height: 60px;
+    }
+    p span{
+      white-space: nowrap;
+      width: 100%;
+      display: inline-block;
+      overflow: hidden;
+      text-overflow: ellipsis;
+    }
+    p span:first-child{
+      font-size: 1.2rem;
+      font-weight: bold;
+      color: black;
+    }
+    p span:last-child{
+      font-size: 1.0rem;
+      color:rgb(182,182,182);
+    }
+  }
+
+
+  .download{
+    font-size:25px;
+    cursor: pointer;
+    &:hover{
+      background: rgb(225,225,226);
+    }
+  }
+
 }
 
 
